--- a/src/styles/pages/ads-list.scss
+++ b/src/styles/pages/ads-list.scss
@@ -1,3 +1,76 @@
+.ads-list-page {
+
+    @media(min-width: 1024px) {
+        .results-nav {
+            margin-bottom: 32px;
+        }
+
+        .sorting-form {
+            margin-bottom: 24px;
+        }
+    }
+
+    .results-nav__selects {
+        .selects {
+            justify-content: flex-start;
+        }
+    }
+
+    .results-nav__select {
+        @media (min-width: 1024px) {
+            margin-right: 16px;
+            &:last-of-type {
+                margin-right: 0;
+            }
+        }
+    }
+
+
+    .main-header {
+        position: relative;
+        @media (max-width: 1023px) {
+            font-size: rem(32);
+            line-height: 1.25;
+            margin-bottom: 24px;
+        }
+
+
+        .btn {
+            position: absolute;
+            top: 8px;
+            right: 16px;
+            width: 256px;
+            padding: 14px 0;
+            @media (max-width: 1279px) {
+                width: 216px;
+            }
+            @media (max-width: 1023px) {
+                position: fixed;
+                z-index: 10;
+                top: auto;
+                right: 0;
+                bottom: 16px;
+                left: 0;
+                width: 270px;
+                margin: auto;
+                padding: 16px 0 16px;
+
+                &__icon {
+                    display: inline-block;
+                }
+            }
+
+            @media (max-width: 413px) {
+                width: 240px;
+            }
+
+            &__icon {
+                display: none;
+            }
+        }
+    }
+}
+
 .ads-list {
     margin-bottom: 32px;
 
@@ -8,6 +81,7 @@
             }
         }
     }
+
     &__item {
         padding-top: 24px;
         padding-bottom: 24px;
@@ -16,25 +90,33 @@
         position: relative;
         z-index: 1;
         border-bottom: 1px solid $border-10;
+        @media (max-width: 1023px) {
+            padding-top: 16px;
+            padding-bottom: 16px;
+        }
+        @media(hover) {
+            &:hover {
+                margin-left: -24px;
+                margin-right: -24px;
+                padding-left: 24px;
+                padding-right: 24px;
+                border-radius: 8px;
+                box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.1);
+                border-top: 1px solid transparent;
+                border-bottom-color: transparent;
+                z-index: 2;
+                margin-top: -1px;
 
-
-        &:hover {
-            margin-left: -24px;
-            margin-right: -24px;
-            padding-left: 24px;
-            padding-right: 24px;
-            border-radius: 8px;
-            box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.1);
-            border-top: 1px solid  transparent;
-            border-bottom-color: transparent;
-            text-decoration: none;
-            z-index: 2;
-            margin-top: -1px;
-
-            .name {
-                color: $coral;
+                .name {
+                    color: $coral;
+                }
             }
         }
+
+        &:hover {
+            text-decoration: none;
+        }
+
 
         &-images {
             flex: 0 0 auto;
@@ -49,6 +131,9 @@
                 height: 136px;
                 margin-right: 24px;
             }
+            @media (max-width: 1023px) {
+                margin-right: 16px;
+            }
         }
 
         &-content {
@@ -61,6 +146,28 @@
             @media (max-width: 1279px) {
                 padding-right: 104px;
             }
+            @media (max-width: 1023px) {
+                padding-right: 0;
+            }
+
+            .price {
+                display: none;
+                @media (max-width: 1023px) {
+                    display: block;
+                    font-size: rem(16);
+                    line-height: 1.25;
+                    color: $text-black;
+                    margin-bottom: 4px;
+                    &__icon {
+                        display: inline-block;
+                        vertical-align: baseline;
+                        margin-left: 8px;
+                    }
+                    b {
+                        font-weight: $font-weight-bold;
+                    }
+                }
+            }
 
             .name {
                 width: 100%;
@@ -69,14 +176,25 @@
                 font-weight: $font-weight-bold;
                 line-height: 1.2;
                 color: $text-black;
+                @media (max-width: 1023px) {
+                    margin-bottom: 8px;
+                    font-weight: $font-weight-normal;
+                    font-size: rem(16);
+                    line-height: 1.25;
+                }
             }
+
             .desc {
                 width: 100%;
                 font-size: rem(14);
                 line-height: 1.14;
                 color: $text-black;
                 margin-bottom: 12px;
+                @media (max-width: 1023px) {
+                    display: none;
+                }
             }
+
             .info {
                 display: flex;
                 align-items: flex-start;
@@ -100,15 +218,21 @@
             @media (max-width: 1279px) {
                 width: 136px;
             }
+            @media (max-width: 1023px) {
+                display: none;
+            }
+
             .price {
                 font-size: rem(20);
                 line-height: 1.2;
                 color: $text-black;
+
                 &__icon {
                     display: inline-block;
                     vertical-align: baseline;
                     margin-left: 8px;
                 }
+
                 b {
                     font-weight: $font-weight-bold;
                 }
@@ -141,6 +265,7 @@
             flex: 1 1 100%;
             margin: 0 1px;
             border-bottom: 4px solid $silver;
+
             &.active {
                 border-color: $coral;
             }
@@ -148,9 +273,9 @@
     }
 
     &__item {
+        @include object-fit(cover, center);
         display: block;
         width: 100%;
         height: 100%;
-        @include object-fit(cover, center);
     }
 }
