--- a/src/templates/pages/information-systems.html
+++ b/src/templates/pages/information-systems.html
@@ -130,7 +130,7 @@
         </div>
     </div>
 
-    <div class="row news__row">
+    <div class="row news__row row__sys" >
         <div class="col-12">
             <div class="header-block">
                 <h2>Системы</h2>
