--- a/src/styles/pages/information-systems.scss
+++ b/src/styles/pages/information-systems.scss
@@ -9,9 +9,9 @@
             width: 100%;
         }
         @media(max-width: 1023px) {
-            padding-top: 14px;
-            padding-bottom: 14px;
-            max-width: 296px;
+            padding-top: 22px;
+            padding-bottom: 22px;
+            max-width: none;
         }
     }
 
@@ -44,6 +44,15 @@
             line-height: 1.29;
             font-weight: 700;
             margin-bottom: 0;
+        }
+    }
+
+    .row__sys {
+        @media(max-width: 575px) {
+            .header-block {
+                margin-top: 48px;
+                margin-bottom: 24px;
+            }
         }
     }
 
