--- a/src/styles/pages/main-page.scss
+++ b/src/styles/pages/main-page.scss
@@ -49,6 +49,10 @@
             width: 100vw;
             max-width: 100vw;
         }
+        @media (max-width: 414px) {
+            margin-right: 0;
+            margin-left: 0;
+        }
         .swiper-slide {
             @media(max-width:767px) {
                 .card {
@@ -60,7 +64,7 @@
                 height: 414px;
             }
             @media(max-width:413px) {
-                width: 100%;
+                //width: 100%;
                 height: 320px;
             }
             .card {
@@ -183,8 +187,8 @@
         width: 100%;
         @media(max-width:767px) {
             width: auto;
-            max-width: calc(100vw - 16px);
-            margin-right: -16px;
+            max-width: 100vw;
+            margin-right: 0;
             margin-bottom: 32px;
             padding-left: 8px;
         }
