--- a/src/templates/pages/profile.html
+++ b/src/templates/pages/profile.html
@@ -14,15 +14,15 @@
                 <!-- if private -->
                 <ul class="profile-articles">
                     <li class="profile-articles__item">
+                        <a href="#0" class="plus"></a>
                         <a href="#0" class="profile-articles__link">
-                            <div class="plus"></div>
                             <div class="text">Мои объявления</div>
                             <div class="count">5</div>
                         </a>
                     </li>
                     <li class="profile-articles__item">
+                        <a href="#0" class="plus"></a>
                         <a href="#0" class="profile-articles__link">
-                            <div class="plus"></div>
                             <div class="text">Мой блог</div>
                             <div class="count">4</div>
                         </a>
@@ -71,8 +71,8 @@
                             <a href="#0" class="profile-blogs__link">Подслушано ВМЗ</a>
                         </li>
                     </ul>
+                    <a href="#0" class="profile-blogs__more profile-blogs__more--public">Все блоги</a>
                 </div>
-                <a href="#0" class="profile-blogs__more profile-blogs__more--public">Все блоги</a>
                 <!-- endif -->
             </div>
             <div class="col-6">
