--- a/src/templates/pages/results.html
+++ b/src/templates/pages/results.html
@@ -170,18 +170,18 @@
 
             <div class="row row--long">
                 <div class="col-12">
-                    <div class="employee">
+                    <a href="#0" class="employee">
                         <div class="employee-content">
-                            <a href="#0" class="employee-photo">
+                            <div class="employee-photo">
                                 <div class="employee-photo__inner">
                                     <picture>
                                         <source srcset="/img/avatar.webp" type="image/webp">
                                         <img src="/img/avatar.jpg" alt="Имя сотрудника">
                                     </picture>
                                 </div>
-                            </a>
+                            </div>
                             <div class="employee-info">
-                                <a href="profile.html" class="employee-info__link">Борисов Виталий Николаевич</a>
+                                <div class="employee-info__link">Борисов<br> Виталий Николаевич</div>
                                 <div class="employee-info__position">Наладчик сварочного и газоплазморезательного
                                     оборудования
                                 </div>
@@ -192,29 +192,29 @@
                                     <address>Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</address>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--phone">
-                                    <a href="tel:882-99-10">882-99-10</a>
+                                    <div>882-99-10</div>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--mobile">
-                                    <a href="tel:+79099121410">+7 (909) 912-14-10</a>
+                                    <div>+7 (909) 912-14-10</div>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--email">
-                                    <a href="mailto:borisov_vn@omk.ru">borisov_vn@omk.ru</a>
+                                    <div>borisov_vn@omk.ru</div>
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                    <div class="employee">
+                    </a>
+                    <a href="#0" class="employee">
                         <div class="employee-content">
-                            <a href="#0" class="employee-photo">
+                            <div class="employee-photo">
                                 <div class="employee-photo__inner">
                                     <picture>
                                         <source srcset="/img/avatar.webp" type="image/webp">
                                         <img src="/img/avatar.jpg" alt="Имя сотрудника">
                                     </picture>
                                 </div>
-                            </a>
+                            </div>
                             <div class="employee-info">
-                                <a href="profile.html" class="employee-info__link">Борисов Виталий Николаевич</a>
+                                <div class="employee-info__link">Борисов<br> Виталий Николаевич</div>
                                 <div class="employee-info__position">Наладчик сварочного и газоплазморезательного
                                     оборудования
                                 </div>
@@ -225,29 +225,29 @@
                                     <address>Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</address>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--phone">
-                                    <a href="tel:882-99-10">882-99-10</a>
+                                    <div>882-99-10</div>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--mobile">
-                                    <a href="tel:+79099121410">+7 (909) 912-14-10</a>
+                                    <div>+7 (909) 912-14-10</div>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--email">
-                                    <a href="mailto:borisov_vn@omk.ru">borisov_vn@omk.ru</a>
+                                    <div>borisov_vn@omk.ru</div>
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                    <div class="employee">
+                    </a>
+                    <a href="#0" class="employee">
                         <div class="employee-content">
-                            <a href="#0" class="employee-photo">
+                            <div class="employee-photo">
                                 <div class="employee-photo__inner">
                                     <picture>
                                         <source srcset="/img/avatar.webp" type="image/webp">
                                         <img src="/img/avatar.jpg" alt="Имя сотрудника">
                                     </picture>
                                 </div>
-                            </a>
+                            </div>
                             <div class="employee-info">
-                                <a href="profile.html" class="employee-info__link">Борисов Виталий Николаевич</a>
+                                <div class="employee-info__link">Борисов<br> Виталий Николаевич</div>
                                 <div class="employee-info__position">Наладчик сварочного и газоплазморезательного
                                     оборудования
                                 </div>
@@ -258,17 +258,17 @@
                                     <address>Выкса — ВМЗ — ТЭСЦ4 — Участок покрытия</address>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--phone">
-                                    <a href="tel:882-99-10">882-99-10</a>
+                                    <div>882-99-10</div>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--mobile">
-                                    <a href="tel:+79099121410">+7 (909) 912-14-10</a>
+                                    <div>+7 (909) 912-14-10</div>
                                 </li>
                                 <li class="employee-contacts__item employee-contacts__item--email">
-                                    <a href="mailto:borisov_vn@omk.ru">borisov_vn@omk.ru</a>
+                                    <div>borisov_vn@omk.ru</div>
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
 
