--- a/src/styles/pages/results.scss
+++ b/src/styles/pages/results.scss
@@ -11,6 +11,7 @@
         background: $white;
         border-radius: 8px;
         margin-top: -1px;
+        color: $text-black;
         @media(max-width: 820px) {
             padding: 0;
         }
@@ -23,6 +24,14 @@
                 .employee-content {
                     border-top-color: transparent;
                 }
+            }
+        }
+
+        &:hover {
+            text-decoration: none;
+
+            .employee-info__link {
+                color: $coral;
             }
         }
 
@@ -45,7 +54,7 @@
 
         &-photo {
             display: block;
-            width: 11%;
+            width: 104px;
             @media(max-width: 767px) {
                 width: 56px;
             }
@@ -71,12 +80,16 @@
         }
 
         &-info {
-            width: 46%;
+            width: calc(100% - 43% - 104px);
             padding-left: 16px;
             font-size: 0.875rem;
             line-height: 1.2;
             @media(max-width: 767px) {
                 width: calc(100% - 56px);
+
+                br {
+                    display: none;
+                }
             }
 
             &__link {
@@ -122,7 +135,7 @@
                 width: 100%;
                 max-width: 100%;
                 overflow: hidden;
-                margin-top: 8px;
+                margin-top: 12px;
 
                 &::after {
                     content: '';
@@ -144,7 +157,7 @@
                 }
 
                 &--phone {
-                    a {
+                    div {
                         &::before {
                             background-image: url(../img/icons/results-phone.svg);
                         }
@@ -152,7 +165,7 @@
                 }
 
                 &--mobile {
-                    a {
+                    div {
                         &::before {
                             background-image: url(../img/icons/results-mobile.svg);
                         }
@@ -160,7 +173,7 @@
                 }
 
                 &--email {
-                    a {
+                    div {
                         &::before {
                             background-image: url(../img/icons/results-email.svg);
                         }
@@ -171,7 +184,7 @@
                     margin-top: 0;
                 }
 
-                address, a {
+                address, div {
                     @include transition();
                     display: flex;
                     font-size: 0.875rem;
@@ -289,12 +302,32 @@
             }
 
             &__preview {
+                position: relative;
                 width: 100%;
                 border-radius: 5px;
                 overflow: hidden;
                 @media(max-width: 767px) {
                     width: calc(50% - 8px);
                 }
+
+                &::after {
+                    @include transition();
+                    content: '';
+                    position: absolute;
+                    z-index: 1;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background: rgba(0, 0, 0, 0);
+                }
+
+                &:hover {
+                    &::after {
+                        background: rgba(0, 0, 0, 0.2);
+                    }
+                }
+
 
                 .inner {
                     position: relative;
@@ -358,6 +391,7 @@
                             content: '';
                             display: block;
                             position: absolute;
+                            z-index: 2;
                             top: 50%;
                             left: 50%;
                             width: 72px;
