--- a/src/templates/pages/ads-user.html
+++ b/src/templates/pages/ads-user.html
@@ -14,11 +14,27 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-12">
+            <div class="control-btn  control-btn--mob">
+                <div class="control-btn__inner">
+                    <button type="button" class="btn btn--secondary">Редактировать</button>
+                    <button type="button" class="btn btn--secondary">Опубликовать</button>
+                    <button type="button" class="btn btn--secondary">Удалить</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-lg-8 main-header">
             <h1>Игрушечный дракон пластик страшно фэнэзи рука</h1>
         </div>
+        <div class="col-12">
+            <div class="price price--mob">
+                <b>500</b> ₽
+            </div>
+        </div>
         <div class="col-lg-8">
-            <div class="ads-user__info">
+            <div class="ads-user__info ads-user__info--pc">
                 <div class="date">5 мая</div>
                 <div class="city">Челябинск</div>
                 <div class="delivery">Возможна отправка в другой регион</div>
@@ -27,189 +43,11 @@
     </div>
     <div class="row">
         <div class="col-lg-8">
-            <div class="ads-user__photo">
-                <div class="ads-user__photo-slider ">
-                        <div class="swiper-container ads-user__photo-main js-ads-user__slider-main">
-                            <div class="swiper-wrapper">
-                                <a href="#" class="swiper-slide">
-                                    <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
-                                        <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                        <source srcset="img/AA5J6740.webp" type="image/webp">
-                                        <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg"   title="" alt="">
-                                    </picture>
-                                </a>
-                                <div class="swiper-slide">
-                                    <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
-                                        <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                        <source srcset="img/AA5J6740.webp" type="image/webp">
-                                        <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg"   title="" alt="">
-                                    </picture>
-                                </div>
-                                <div class="swiper-slide">
-                                    <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
-                                        <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                        <source srcset="img/AA5J6740.webp" type="image/webp">
-                                        <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg"   title="" alt="">
-                                    </picture>
-                                </div>
-                                <div class="swiper-slide">
-                                    <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
-                                        <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                        <source srcset="img/AA5J6740.webp" type="image/webp">
-                                        <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg"   title="" alt="">
-                                    </picture>
-                                </div>
-                                <div class="swiper-slide">
-                                    <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
-                                        <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                        <source srcset="img/AA5J6740.webp" type="image/webp">
-                                        <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg"   title="" alt="">
-                                    </picture>
-                                </div>
-                                <div class="swiper-slide">
-                                    <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
-                                        <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                        <source srcset="img/AA5J6740.webp" type="image/webp">
-                                        <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg"   title="" alt="">
-                                    </picture>
-                                </div>
-                                <div class="swiper-slide">
-                                    <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
-                                        <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                        <source srcset="img/AA5J6740.webp" type="image/webp">
-                                        <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg"   title="" alt="">
-                                    </picture>
-                                </div>
-                                <div class="swiper-slide">
-                                    <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
-                                        <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                        <source srcset="img/AA5J6740.webp" type="image/webp">
-                                        <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg"   title="" alt="">
-                                    </picture>
-                                </div>
-                                <div class="swiper-slide">
-                                    <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
-                                        <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                        <source srcset="img/AA5J6740.webp" type="image/webp">
-                                        <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg"   title="" alt="">
-                                    </picture>
-                                </div>
-                                <div class="swiper-slide">
-                                    <picture class="thumbs-slider__main-img js-thumbs-slider__main-img">
-                                        <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                        <source srcset="img/AA5J6740.webp" type="image/webp">
-                                        <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg"   title="" alt="">
-                                    </picture>
-                                </div>
-                            </div>
-                            <div class="swiper-container  ads-user__photo-nav js-ads-user__slider-nav">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide">
-                                        <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
-                                            <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                            <source srcset="img/AA5J6740.webp" type="image/webp">
-                                            <!--[if IE 9]></video><![endif]-->
-                                            <img src="img/AA5J6740.jpg"   title="" alt="">
-                                        </picture>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
-                                            <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                            <source srcset="img/AA5J6740.webp" type="image/webp">
-                                            <!--[if IE 9]></video><![endif]-->
-                                            <img src="img/AA5J6740.jpg"   title="" alt="">
-                                        </picture>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
-                                            <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                            <source srcset="img/AA5J6740.webp" type="image/webp">
-                                            <!--[if IE 9]></video><![endif]-->
-                                            <img src="img/AA5J6740.jpg"   title="" alt="">
-                                        </picture>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
-                                            <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                            <source srcset="img/AA5J6740.webp" type="image/webp">
-                                            <!--[if IE 9]></video><![endif]-->
-                                            <img src="img/AA5J6740.jpg"   title="" alt="">
-                                        </picture>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
-                                            <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                            <source srcset="img/AA5J6740.webp" type="image/webp">
-                                            <!--[if IE 9]></video><![endif]-->
-                                            <img src="img/AA5J6740.jpg"   title="" alt="">
-                                        </picture>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
-                                            <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                            <source srcset="img/AA5J6740.webp" type="image/webp">
-                                            <!--[if IE 9]></video><![endif]-->
-                                            <img src="img/AA5J6740.jpg"   title="" alt="">
-                                        </picture>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
-                                            <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                            <source srcset="img/AA5J6740.webp" type="image/webp">
-                                            <!--[if IE 9]></video><![endif]-->
-                                            <img src="img/AA5J6740.jpg"   title="" alt="">
-                                        </picture>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
-                                            <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                            <source srcset="img/AA5J6740.webp" type="image/webp">
-                                            <!--[if IE 9]></video><![endif]-->
-                                            <img src="img/AA5J6740.jpg"   title="" alt="">
-                                        </picture>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
-                                            <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                            <source srcset="img/AA5J6740.webp" type="image/webp">
-                                            <!--[if IE 9]></video><![endif]-->
-                                            <img src="img/AA5J6740.jpg"   title="" alt="">
-                                        </picture>
-                                    </div>
-                                    <div class="swiper-slide">
-                                        <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
-                                            <!--[if IE 9]><video style="display: none;"><![endif]-->
-                                            <source srcset="img/AA5J6740.webp" type="image/webp">
-                                            <!--[if IE 9]></video><![endif]-->
-                                            <img src="img/AA5J6740.jpg"   title="" alt="">
-                                        </picture>
-                                    </div>
-                                </div>
-                            </div>
-                            <button class="thumbs-slider__zoom"></button>
-                        </div>
-                        <div class="swiper-button swiper-button-prev thumbs-slider-prev"></div>
-                        <div class="swiper-button swiper-button-next thumbs-slider-next"></div>
-                        <div class="swiper-pagination"></div>
-                </div>
-                <div class="ads-user__photo-desc">
-                    Серия игрушек из Макдональдс. Как приручить дракона. Вся серия 10 игрушек. Все игрушки в рабочем состоянии!!!Серию не разбиваю!! Отдельно игрушки из этой серии есть в других моих лотах.
-                </div>
-            </div>
+            {% include 'ads-slider-user/ads-slider-user.html' %}
         </div>
         <div class="col-lg-4">
             <div class="ads-user__detail">
-                <div class="price"><b>500</b> ₽</div>
+                <div class="price price--pc"><b>500</b> ₽</div>
                 <a href="tel:+79435431263" class="phone">+7 943 543 12 63</a>
                 <a href="mailto:erganom@gmail.com" class="email">erganom@gmail.com</a>
                 <div class="people">
@@ -221,7 +59,7 @@
                         <div class="desc">Ведущий геодезист</div>
                     </div>
                 </div>
-                <div class="control-btn">
+                <div class="control-btn control-btn--pc" >
                     <a href="#" class="btn btn--secondary">2 объвления пользователя</a>
                     <button type="button" class="btn btn--secondary">Редактировать</button>
                     <button type="button" class="btn btn--secondary">Опубликовать</button>
