--- a/src/styles/pages/ads-user.scss
+++ b/src/styles/pages/ads-user.scss
@@ -3,10 +3,87 @@
 
     .main-header {
         margin-bottom: 32px;
-
+        @media (max-width: 1023px) {
+            margin-bottom: 16px;
+        }
         h1 {
             font-size: rem(40);
             line-height: 1.2;
+            margin-bottom: 0;
+            @media (max-width: 1023px) {
+                font-size: rem(32);
+                line-height: 1.25;
+            }
+        }
+    }
+    .control-btn {
+        display: flex;
+        flex-direction: column;
+
+        .btn {
+            max-width: 256px;
+            margin-bottom: 16px;
+            padding-top: 17px;
+            padding-bottom: 17px;
+            @media (max-width: 1279px) {
+                max-width: none;
+            }
+        }
+
+        &--pc {
+            @media (max-width: 1023px) {
+                margin-bottom: 32px;
+                button {
+                    display: none;
+                }
+            }
+        }
+
+        &--mob {
+            flex-direction: row;
+            -ms-overflow-style: none;
+            overflow: -moz-scrollbars-none;
+            scrollbar-width: none;
+            overflow: auto;
+            margin: 0 -16px 24px;
+            padding: 0 16px;
+            @media (min-width: 1024px) {
+                display: none;
+            }
+
+            .control-btn__inner {
+                display: flex;
+                align-items: flex-start;
+            }
+            .btn {
+                flex-shrink: 0;
+                margin-bottom: 0;
+                width: auto;
+                margin-right: 16px;
+                padding: 9px 18px;
+            }
+            &::-webkit-scrollbar {
+                display: none;
+            }
+        }
+    }
+
+    .price {
+        font-size: rem(32);
+        line-height: 1.25;
+        margin-bottom: 24px;
+        &--mob {
+            margin-bottom: 16px;
+            font-size: rem(24);
+            line-height: 1.33;
+            @media (min-width: 1024px) {
+                display: none;
+            }
+        }
+        &--pc {
+            @media (max-width: 1023px) {
+                display: none;
+            }
         }
     }
 
@@ -28,7 +105,7 @@
         font-size: rem(16);
         line-height: 1.25;
         color: $text-silver;
-        margin-bottom: 28px;
+        margin-bottom: 16px;
 
         .date {
             margin-right: 32px;
@@ -45,17 +122,34 @@
             line-height: 1.43;
             color: $white;
         }
+        &--pc {
+            @media (max-width: 1023px) {
+                display: none;
+            }
+        }
+        &--mob {
+            flex-wrap: wrap;
+            margin-bottom: 4px;
+            @media (min-width: 1024px) {
+                display: none;
+            }
+            .date {
+                margin-right: 16px;
+            }
+            & > div {
+                margin-bottom: 12px;
+            }
+        }
     }
 
     &__detail {
         display: flex;
         flex-direction: column;
-
-        .price {
-            font-size: rem(32);
-            line-height: 1.25;
-            margin-bottom: 24px;
+        @media (max-width: 1023px) {
+            border-top: 1px solid $border-10;
+            padding-top: 23px;
         }
+
 
         .phone {
             margin-bottom: 8px;
@@ -64,6 +158,19 @@
             line-height: 1.5;
             color: $text-black;
             text-decoration: none;
+            @media (max-width: 1023px) {
+                text-align: center;
+                border-radius: 5px;
+                color: $white;
+                background-color: $green;
+                display: block;
+                padding: 16px 17px;
+                margin-bottom: 16px;
+                &:hover, &:focus, &:not(:disabled):not(.disabled):active {
+                    background-color: $green-dark;
+                    box-shadow: none;
+                }
+            }
         }
 
         .email {
@@ -72,6 +179,70 @@
             color: #1a1a1a;
             text-decoration: none;
             margin-bottom: 24px;
+            @media (max-width: 1023px) {
+                display: block;
+                border: solid 1px $border-10;
+                padding: 16px 17px;
+                text-align: center;
+                border-radius: 5px;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
+                background-color: $white;
+                font-weight: 400;
+                color: #00000a;
+                margin-bottom: 16px;
+                &:active {
+                    transform: scale(.96);
+                }
+                &:hover, &:focus, &:not(:disabled):not(.disabled):active {
+                    border: solid 1px $border-40;
+                    background-color: $white;
+                    color: #00000a;
+                    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
+                }
+            }
+        }
+
+        .people {
+            display: flex;
+            align-items: flex-start;
+            margin-bottom: 32px;
+            @media (max-width: 1023px) {
+                order: -1;
+                margin-bottom: 24px;
+            }
+
+            .avatar {
+                flex: 0 0 auto;
+                width: 40px;
+                height: 40px;
+                overflow: hidden;
+                margin-right: 16px;
+                border-radius: 100%;
+                img {
+                    @include object-fit(cover, center);
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            .content {
+                flex: 1 1 auto;
+                .name {
+                    margin-bottom: 4px;
+                    font-size: rem(16);
+                    font-weight: $font-weight-bold;
+                    line-height: 1.25;
+                    color: $text-black;
+                }
+                .desc {
+                    font-size: rem(14);
+                    line-height: 1.14;
+                    color: $text-silver;
+                }
+            }
         }
     }
+
+    @import '../../blocks/modules/ads-slider-user/ads-slider-user';
 }
