start profile adaptive

--- a/src/templates/pages/profile.html
+++ b/src/templates/pages/profile.html
@@ -200,6 +200,10 @@
                                 <div class="regards-list__description">Лучший мастер смены</div>
                                 <img src="img/icons/profile-regard-6.svg" alt="alt">
                             </li>
+                            <li class="regards-list__item">
+                                <div class="regards-list__description">Лучший мастер смены</div>
+                                <img src="img/icons/profile-regard-7.svg" alt="alt">
+                            </li>
                         </ul>
                         <a href="#0" class="regards__all js-regards__all">Все награды</a>
                     </div>
