--- a/src/styles/pages/profile.scss
+++ b/src/styles/pages/profile.scss
@@ -326,6 +326,14 @@
                     position: relative;
                     margin-right: 12px;
                     cursor: pointer;
+                    @media (max-width: 1279px) {
+                        &:nth-child(n+7) {
+                            display: none;
+                        }
+                        &:nth-child(6) {
+                            margin-right: 0;
+                        }
+                    }
 
                     &:last-child {
                         margin-right: 0;
